# TransactIQ

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routes/: jobs.py
app/core/: config.py
app/db/: database.py
app/models/: __init__.py  job.py  job_summary.py  transaction.py
app/schemas/: __init__.py  base.py  common.py  job.py  job_summary.py  results.py  transaction.py
app/services/: anomaly_detector.py  csv_processor.py  llm_service.py
app/workers/: celery_app.py  tasks.py
migrations/: env.py
migrations/versions/: 51bfecf009aa_initial_schema.py
