[project]
name = "transactiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "celery[redis]>=5.6.3",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.51",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]
